FF horizontal scroll fix

--- a/assets/less/style6.less
+++ b/assets/less/style6.less
@@ -52,7 +52,7 @@ p {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	display: table;
+	/*display: table;*/
 	background-color: @background_color_1;
 	overflow: hidden;
 	.to_rev_slide {
